@@ -1,3 +1,14 @@
+2010-07-16  Pavel Podivilov  <podivilov@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        [V8] V8Proxy::retrieve may return null if javascript is disabled. Add a check
+        to avoid crashes in inspected page.
+        https://bugs.webkit.org/show_bug.cgi?id=42065
+
+        * bindings/v8/ScriptDebugServer.cpp:
+        (WebCore::ScriptDebugServer::addListener):
+
 2010-07-16  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Yury Semikhatsky.
